--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -15,20 +15,13 @@ jobs:
 
     - name: Install dependencies
       run: | 
-        # обновление pip
-        python -m pip install --upgrade pip 
-        # установка flake8 и его плагинов
+        python -m pip install --upgrade pip         
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-        # установка зависимостей
         pip install -r requirements.txt 
     - name: Test with flake8 and django tests
       run: |
-        # запуск проверки проекта по flake8
-        python -m flake8
-        # перейти в папку, содержащую manage.py — 
-        #<корневая_папка_infra_actions>/<папка_проекта>/manage.py
-        cd infra_project/
-        # запустить написанные разработчиком тесты
+        python -m flake8        
+        cd api_yamdb/        
         python manage.py test
         
   build_and_push_to_docker_hub:
@@ -53,7 +46,7 @@ jobs:
         uses: docker/build-push-action@v2 
         with:
           push: true
-          tags: vladkataev/infra_actions:latest
+          tags: vladkataev/api_yamdb:latest
           
   deploy:
     runs-on: ubuntu-latest
@@ -67,11 +60,16 @@ jobs:
         key: ${{ secrets.SSH_KEY }}
         passphrase: ${{ secrets.PASSPHRASE }} 
         script: |
-          # Выполняет pull образа с DockerHub
-          sudo docker pull vladkataev/infra_actions
-          #остановка всех контейнеров
-          sudo docker stop $(sudo docker ps -a -q)
-          sudo docker run --rm -d -p 5000:5000 vladkataev/infra_actions
+          sudo docker-compose stop
+          sudo docker-compose rm web
+          touch .env
+          echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
+          echo DB_NAME=${{ secrets.DB_NAME }} >> .env
+          echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
+          echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
+          echo DB_HOST=${{ secrets.DB_HOST }} >> .env
+          echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+          sudo docker-compose up -d
           
   send_message:
     runs-on: ubuntu-latest
