--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -17,12 +17,12 @@ jobs:
       run: | 
         python -m pip install --upgrade pip         
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-        pip install -r requirements.txt 
+        pip install -r requirements.txt
+        
     - name: Test with flake8 and django tests
       run: |
         python -m flake8        
-        cd api_yamdb/        
-        python manage.py test
+        pytest
         
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
@@ -30,19 +30,15 @@ jobs:
     needs: tests
     steps:
       - name: Check out the repo
-        # Проверка доступности репозитория Docker Hub для workflow
         uses: actions/checkout@v2 
-      - name: Set up Docker Buildx
-        # Вызов сборщика контейнеров docker
+      - name: Set up Docker Buildx        
         uses: docker/setup-buildx-action@v1 
-      - name: Login to Docker 
-        # Запуск скрипта авторизации на Docker Hub
+      - name: Login to Docker        
         uses: docker/login-action@v1 
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Push to Docker Hub
-        # Пуш образа в Docker Hub 
+      - name: Push to Docker Hub        
         uses: docker/build-push-action@v2 
         with:
           push: true
@@ -80,5 +76,4 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: ${{ github.workflow }} успешно выполнен! 
-        
+        message: ${{ github.workflow }} успешно выполнен!        
