--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -41,6 +41,8 @@ jobs:
       - name: Push to Docker Hub        
         uses: docker/build-push-action@v2 
         with:
+          context: .
+          file: ./api_yamdb/Dockerfile
           push: true
           tags: vladkataev/api_yamdb:latest
           
