--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -2,9 +2,9 @@ FROM python:3.7-slim
 
 WORKDIR /app
 
-COPY requirements.txt /app
+COPY api_yamdb/ ./
 
-RUN pip3 install -r /app/requirements.txt --no-cache-dir
+RUN pip3 install -r requirements.txt --no-cache-dir
 
 COPY ./ /app
 
