--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -40,11 +40,10 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push to Docker Hub        
         uses: docker/build-push-action@v2 
-        with:
-          context: .
-          file: ./api_yamdb/Dockerfile
+        with:                   
           push: true
           tags: vladkataev/api_yamdb:latest
+          file: api_yamdb/Dockerfile
           
   deploy:
     runs-on: ubuntu-latest
