--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -43,6 +43,7 @@ jobs:
         with:
           push: true
           tags: vladkataev/api_yamdb:latest
+          file: api_yamdb/Dockerfile
           
   deploy:
     runs-on: ubuntu-latest
