--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -1,4 +1,4 @@
-name: Django-app workflow
+name: Yamdb-final workflow
 
 on: [push]
 
@@ -59,6 +59,7 @@ jobs:
         script: |
           sudo docker-compose stop
           sudo docker-compose rm web
+          sudo rm .env
           touch .env
           echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
           echo DB_NAME=${{ secrets.DB_NAME }} >> .env
