--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -1,4 +1,4 @@
-name: Django-app workflow
+name: Yamdb-final workflow
 
 on: [push]
 
@@ -40,7 +40,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push to Docker Hub        
         uses: docker/build-push-action@v2 
-        with:
+        with:                   
           push: true
           tags: vladkataev/api_yamdb:latest
           file: api_yamdb/Dockerfile
@@ -58,7 +58,7 @@ jobs:
         passphrase: ${{ secrets.PASSPHRASE }} 
         script: |
           sudo docker-compose stop
-          sudo docker-compose rm web
+          sudo docker-compose rm web          
           touch .env
           echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
           echo DB_NAME=${{ secrets.DB_NAME }} >> .env
@@ -67,7 +67,7 @@ jobs:
           echo DB_HOST=${{ secrets.DB_HOST }} >> .env
           echo DB_PORT=${{ secrets.DB_PORT }} >> .env
           echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env
-          sudo docker-compose up -d
+          sudo docker-compose up -d          
           
   send_message:
     runs-on: ubuntu-latest
@@ -78,4 +78,4 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: ${{ github.workflow }} успешно выполнен! 
+        message: ${{ github.workflow }} успешно выполнен!
