--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -47,6 +47,7 @@ jobs:
           
   deploy:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
     needs: build_and_push_to_docker_hub
     steps:
     - name: executing remote ssh commands to deploy
