--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -47,6 +47,7 @@ jobs:
           
   deploy:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
     needs: build_and_push_to_docker_hub
     steps:
     - name: executing remote ssh commands to deploy
@@ -80,4 +81,4 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: ${{ github.workflow }} успешно выполнен!    
+        message: ${{ github.workflow }} успешно выполнен!
